[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rincon"
version = "0.1.0"
description = "Python client library for the Rincon service registry"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bharat Kathi", email = "bk1031dev@gmail.com" },
]
keywords = ["rincon", "service-registry", "service-discovery", "microservices"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/BK1031/rincon-py"
Repository = "https://github.com/BK1031/rincon-py"
Issues = "https://github.com/BK1031/rincon-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["rincon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
]
